--- a/youtube.html
+++ b/youtube.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    < <header class="header">
+     <header class="header">
         <div class="left-section"><img class="hamburger" src="img/hamburger-menu.svg" alt="">
             <img class="youtube-logo" src="img/youtube-logo.svg" alt="">
         </div>
